# PokerHandEvaluator

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: build-and-test.yml  ci.yml  docs.yml  lint-suggest-fork.yml  lint-suggest.yml  pre-commit.yml  publish-pypi.yml  publish-testpypi.yml
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  main.cc
cpp/benchmark/: benchmark.cc  benchmark_plo4.cc  benchmark_plo5.cc  benchmark_plo6.cc
cpp/examples/: .gitignore  Makefile
cpp/include/phevaluator/: card.h  card_sampler.h  phevaluator.h
cpp/src/: evaluator8.cc  evaluator9.cc  evaluator_plo5.c  gen_plo5.cc  hash.c  tables.h
cpp/test/: evaluation.cc  evaluation_omaha.cc  evaluation_plo4.cc  evaluation_plo5.cc  evaluation_plo6.cc  rank.cc
cpp/testutil/: card_sampler.cc
docs/: README.md  changelog.md  conf.py  index.rst
docs/algorithm/: index.md
docs/cpp/: building.rst  card_id.rst  examples.rst  index.rst  usage.rst
docs/python/: api.rst  card_id.rst  index.rst  installation.rst  usage.rst
python/: .gitignore  MANIFEST.in  README.md  benchmark.py  examples.py  pyproject.toml  run.sh  setup.py
python/phevaluator/: __init__.py  _pheval.c  card.py  evaluator.py  evaluator5.py  evaluator6.py  evaluator7.py  evaluator_omaha.py  evaluator_texas.py  examples.py  hash.py
python/phevaluator/evaluator/: card.py  dptables.py  evaluator.py  evaluator5.py  evaluator6.py  evaluator7.py  evaluator_omaha.py  hash.py  hashtable6.py
python/phevaluator/table_tests/: test_hashtable5.py  utils.py
python/phevaluator/tables/: __init__.py  dptables.py  hashtable.py  hashtable5.py  hashtable6.py  hashtable7.py
python/src/: dptables.py  evaluator.py  evaluator5.py  hash.py  hashtable.py  hashtable5.py  hashtable7.py  hashtable8.py  hashtable9.py
python/test/: test.py
python/test_tables/: __init__.py  dptables_from_cc.py  hashtables_from_cc.py  test_hashtable.py  test_hashtable5.py  test_hashtable6.py  test_tables.py  utils.py
python/tests/: _csv_fixtures.py  test_card.py  test_evalator_omaha.py  test_evaluator.py  test_evaluator_omaha.py
python/tests/table_tests/: test_dptables.py  test_hashtable.py  test_hashtable5.py  test_hashtable6.py  test_hashtable7.py  utils.py
test/plo4/: id_input_tests.csv  string_input_tests.csv
test/plo5/: id_input_tests.csv  string_input_tests.csv
test/plo6/: id_input_tests.csv  string_input_tests.csv
